--- a/SizeAnalysis.ipynb
+++ b/SizeAnalysis.ipynb
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yes I would, it seems like there are few cells that have an area from 20 - 200 and rater a lot of the dictribution of the data is around 300 and beyond 500. If I were to rerun the particle analysis I would make the maximum particle size larger than 500 since our data is cut off at this point. "
+    "Yes I would, it seems like there are few cells that have an area from 20 - 200 and rather a lot of the distribution of the data is around 300 and beyond 500. If I were to rerun the particle analysis I would make the maximum particle size larger than 500 since our data is cut off at this point. "
    ]
   },
   {
